[tool.poetry]
name = "pool"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.1"
pydantic = "^1.9.0"
aiohttp = "^3.8.1"
PyYAML = "^6.0"
pathlib = "^1.0.1"
SQLAlchemy = "^1.4.32"
aiopg = {extras = ["sa"], version = "^1.3.3"}
pytest-aiohttp = "^1.0.4"
marshmallow = "^3.15.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
extend-exclude = '''
/(
  | .venv/
)/
'''


[tool.pytest.ini_options]
addopts = "-vs"
asyncio_mode="auto"